@@ -1,24 +1,29 @@
 package com.piggyfarm.grpc.slaughterhouse;
 
+import com.domain.Part;
+import com.domain.PigPartType;
+import com.domain.Product;
+import com.domain.Tray;
 import com.piggyfarm.grpc.model.*;
-import com.piggyfarm.grpc.service.PigService;
+import com.piggyfarm.grpc.service.RegisterServiceClient;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Service
 public class PackingStation implements Runnable
 {
   @Autowired
-  private PigService pigService;
+  private RegisterServiceClient registerServiceClient;
   @Autowired
   private Shop shop;
   private List<Tray> trays;
 
   //Cycle algorithm
-  private List<PigPartType> pigPartsList = List.of(PigPartType.values());
+  private List<PigPartType> pigPartsList = Arrays.asList(PigPartType.values());
   private PigPartType partToLookfor;
   private int count = 0;
 
@@ -111,7 +116,7 @@ public class PackingStation implements Runnable
 
   private void sendFullProduct(Product productToSend)
   {
-    System.out.println(productToSend.getParts().get(0).getPartType());
+    System.out.println(productToSend.getParts().get(0).getType());
     //Calculate weight
     double weight = 0;
     for (Part specPart : productToSend.getParts())
@@ -121,7 +126,7 @@ public class PackingStation implements Runnable
     productToSend.setWeight(weight);
 
     //Register to database
-    Product registeredProduct = pigService.registerProduct(productToSend);
+    Product registeredProduct = registerServiceClient.registerProduct(productToSend);
 
     //Send til shop
     shop.deliverProduct(registeredProduct);
